added GNEWS and the news api. update policy and such

--- a/news/.env.example
+++ b/news/.env.example
@@ -1,2 +1,4 @@
 NEWSDATA_API_KEY= your_actual_api_key_here
 NEWSAPI_KEY= your_actual_api_key_here
+GNEWS_API_KEY= your_actual_api_key_here
+THENEWS_API_KEY= your_actual_api_key_here
